--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -42,6 +42,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/book"
         />
+
+    <ImageView
+        android:id="@+id/shield_view"
+        app:layout_constraintBottom_toTopOf="@id/spell_book_view"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
     <com.andrognito.patternlockview.PatternLockView
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
