--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="fire">#F44336</color>
+    <color name="elec">#673AB7</color>
+    <color name="water">#2196F3</color>
+    <color name="background">#E2000000</color>
 </resources>
