--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -14,6 +14,30 @@
         android:layout_height="0dp">
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:id="@+id/enemy_view"
+        app:layout_constraintTop_toBottomOf="@id/mana_layout"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toTopOf="@id/shield_view"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:id="@+id/dragon_img_view"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_margin="10dp"
     android:id="@+id/hp_layout"
