--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -24,8 +24,8 @@
         android:layout_height="0dp">
 
         <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:id="@+id/dragon_img_view"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +34,18 @@
             />
 
 
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/dragon_effect_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:translationZ="2dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/shield_view"
+        app:layout_constraintTop_toBottomOf="@+id/textview_first" />
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_margin="10dp"
