--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -18,14 +18,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:id="@+id/enemy_view"
-        app:layout_constraintTop_toBottomOf="@id/mana_layout"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toTopOf="@id/shield_view"
+        android:alpha="0.6"
+        android:background="@drawable/volcano"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/spell_book_view"
         android:layout_height="0dp">
 
         <ImageView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="350dp"
+            android:layout_height="450dp"
+            android:translationZ="3dp"
             android:id="@+id/dragon_img_view"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
