--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -19,14 +19,13 @@
         android:layout_width="match_parent"
         android:id="@+id/enemy_view"
         android:alpha="0.6"
-        android:background="@drawable/volcano"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/spell_book_view"
         android:layout_height="0dp">
 
         <ImageView
             android:layout_width="350dp"
-            android:layout_height="450dp"
+            android:layout_height="350dp"
             android:translationZ="3dp"
             android:id="@+id/dragon_img_view"
             app:layout_constraintTop_toTopOf="parent"
@@ -112,24 +111,29 @@
     <ImageView
         android:layout_width="match_parent"
         android:id="@+id/spell_book_view"
-        android:layout_height="200dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="280dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/book"
         />
 
+
     <ImageView
         android:id="@+id/shield_view"
-        app:layout_constraintBottom_toTopOf="@id/spell_book_view"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:scaleType="fitXY"
+        android:layout_height="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:alpha="0.5"
+        android:scaleType="centerCrop"
         />
     <com.andrognito.patternlockview.PatternLockView
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:layout_marginBottom="50dp"
         app:normalStateColor="#E2000000"
         app:dotNormalSize="12dp"
         app:dotSelectedSize="24dp"
