--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -19,11 +19,25 @@
         android:layout_width="match_parent"
         android:id="@+id/enemy_view"
         android:alpha="0.6"
+        android:paddingLeft="80dp"
+        android:paddingRight="80dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/spell_book_view"
         android:layout_height="0dp">
 
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:id="@+id/drag_hp_bar"
+                android:layout_height="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="100dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:cardBackgroundColor="#2ECA0B"
+                app:cardCornerRadius="5dp"/>
+
         <ImageView
+            android:layout_marginTop="40dp"
             android:layout_width="350dp"
             android:layout_height="350dp"
             android:translationZ="3dp"
@@ -66,6 +80,8 @@
         app:cardCornerRadius="30px"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_margin="10dp"
@@ -120,6 +136,7 @@
 
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/shield_view"
         android:layout_width="match_parent"
         android:layout_height="350dp"
